# testmaturin

./: Cargo.toml  README.md  pyproject.toml
CoolData/data/: doesntwork.txt
testmaturin/: Cargo.toml  pyproject.toml
testmaturin-0.1.0.data/data/: b.txt
testmaturin.data/data/: a.txt
